# zmanager-mobile

./: .gitignore  AGENTS.md  README.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/tzap/zmanager/mobile/: ArchiveImport.kt  ArchiveListing.kt  MainActivity.kt
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/test/java/org/tzap/zmanager/mobile/: ArchiveImportTest.kt  ArchiveListingTest.kt
docs/: architecture.md  local-development.md  mobile-implementation-plan.md  mobile-launch-spec.md  mobile-product-design.md
fixtures/: README.md
ios/ZManagerMobile/ZManagerMobile/: ContentView.swift  Info.plist  ZManagerMobileApp.swift
ios/ZManagerMobile/ZManagerMobile.xcodeproj/: project.pbxproj
ios/ZManagerMobile/ZManagerMobile/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/ZManagerMobile/ZManagerMobileTests/: ZManagerMobileTests.swift
rust/: Cargo.toml
rust/tools/uniffi-bindgen/: Cargo.toml
rust/zmanager-mobile-core/: Cargo.toml  build.rs
rust/zmanager-mobile-core/src/: lib.rs
rust/zmanager-mobile-core/uniffi/: uniffi.toml  zmanager_mobile_core.udl
scripts/: build-ios-rust.sh  check-android.sh  check-ios.sh  check-rust.sh  generate-uniffi-bindings.sh
